--- a/index.html
+++ b/index.html
@@ -1,28 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="bootstrap-5.3.3-dist/css/bootstrap.min.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="bootstrap-5.3.3-dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
+
 <body>
 
-    <div class="card text-center mx-auto mt-5" style="width: 18rem;">
-        <img src="image/eid.jpg" class="card-img-top" alt="Eid image">
-        <div class="card-body">
-            <h2 class="head">EID MUBARAK</h2>
-          <p class="card-text">from <span class="name">maheen khan</span> and her family. <hr> <span class="bottom">May the guidance and blessings of Allah be with you and your family. <span class="wish">Eid Mubarak!</span></span> 🕌❤️</p>
-        </div>
-      </div>
+  <!-- <div class="card text-center mx-auto mt-5 animate__animated animate__bounceInUp" style="width: 18rem;">
+    <img src="image/eid.jpg" class="card-img-top" alt="Eid image">
+    <div class="card-body">
+      <h2 class="head">EID MUBARAK</h2>
+      <p class="card-text">from <span class="name">maheen khan</span> and her family.
+        <hr> <span class="bottom">May the guidance and blessings of Allah be with you and your family. <span class="wish">Eid Mubarak!</span></span> 🕌❤️
+      </p>
+    </div>
+  </div> -->
 
 
 
-    <script src="bootstrap-5.3.3-dist/js/bootstrap.min.js"></script>
-    <script src="index.js">
-        // var name = prompt("Enter your name : ");
-
-    </script>
+  <script src="bootstrap-5.3.3-dist/js/bootstrap.min.js"></script>
+  <script src="index.js"></script>
 </body>
+
 </html>
